test/library/packages/UnrolledLinkedList/this/testThisHalt.good
testThisHalt.chpl:8: error: halt reached - Invalid unrolledLinkedList index: 1
